Bug #21961
[rbd-mirror] spurious "bufferlist::end_of_buffer" exception
Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:
0%
Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
2017-10-27T17:50:18.422 INFO:tasks.rbd_mirror.cluster2.client.mirror.smithi021.stderr:2017-10-27 17:50:18.424 7fd347fff700 -1 rbd::mirror::image_replayer::PrepareRemoteImageRequest: 0x7fd33c0102a0 decode_client_meta: failed to decode client meta data: buffer::end_of_buffer 2017-10-27T17:50:20.146 INFO:tasks.rbd_mirror.cluster1.client.mirror.smithi021.stderr:2017-10-27 17:50:20.149 7f8e91e25700 -1 rbd::mirror::ImageReplayer: 0x7f8e88008750 [2/5b9b618c-37ac-40ba-a2d5-ce75441dda62] handle_init_remote_journaler: image_id=10294423c777, m_client_meta.image_id=10294423c777, client.state=connected
Related issues
History
#1 Updated by Jason Dillaman over 5 years ago
- Status changed from In Progress to Fix Under Review
#2 Updated by Mykola Golub over 5 years ago
- Status changed from Fix Under Review to Pending Backport
#3 Updated by Nathan Cutler over 5 years ago
- Copied to Backport #21969: luminous: [rbd-mirror] spurious "bufferlist::end_of_buffer" exception added
#4 Updated by Jason Dillaman about 5 years ago
- Status changed from Pending Backport to Resolved